# qoauth

./: CMakeLists.txt
